--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <h2 class="clock">00:00</h2>
+    <div class="quote">
+        <span></span>
+        <br>
+        <span></span>
+    </div>
+    <div class="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="config.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/weather.js"></script>
+</body>
+</html>
