feat: greeting update

--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
         <span></span>
         <span></span>
     </div>
+    <form id=login-form class="hidden">
+        <h1>Hello, what's your name?</h1>
+        <input required maxlength="15" type="text">
+        <button class="hidden">Login</button>
+    </form>
+        <h1 id=greeting class="hidden"></h1>
     <script src="config.js"></script>
     <script src="js/background.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/greeting.js"></script>
 </body>
 </html>
