feat: todolist update

--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
         <input required maxlength="15" type="text">
         <button class="hidden">Login</button>
     </form>
-        <h1 id=greeting class="hidden"></h1>
+    <h1 id=greeting class="hidden"></h1>
+    <div class="todo">
+        <form id="todo-form">
+            <h1>To do list</h1>
+            <input required type="text">
+        </form>
+        <ul id="todo-list"></ul>
+    </div>
     <script src="config.js"></script>
     <script src="js/background.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/weather.js"></script>
     <script src="js/greeting.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
